--- a/microservices/config-server/src/main/resources/application.properties
+++ b/microservices/config-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
+spring.application.name=CONFIG-SERVER
+server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/mburusam/config-server-repo
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=master
+#management.endpoints.web.exposure.include=*
