--- a/microservices/config-server/src/main/resources/application.properties
+++ b/microservices/config-server/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=CONFIG-SERVER
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/mburusam/config-server-repo
 spring.cloud.config.server.git.clone-on-start=true
-spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.default-label=main
 #management.endpoints.web.exposure.include=*
