--- a/microservices/department-service/src/main/resources/application.properties
+++ b/microservices/department-service/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/department_service
-spring.datasource.username=root
-spring.datasource.password=root
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-server.port=8082
-eureka.instance.hostname=localhost
+#spring.datasource.url=jdbc:mysql://localhost:3306/department_service
+#spring.datasource.username=root
+#spring.datasource.password=root
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#server.port=8082
+#eureka.instance.hostname=localhost
+#spring.application.name=DEPARTMENT-SERVICE
+#eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
+#
 spring.application.name=DEPARTMENT-SERVICE
-eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
-
-
+spring.config.import=optional:configserver:http://localhost:8888
