--- a/microservices/department-service/src/main/resources/application.properties
+++ b/microservices/department-service/src/main/resources/application.properties
@@ -9,5 +9,10 @@
 #spring.application.name=DEPARTMENT-SERVICE
 #eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
 #
+#spring.rabbitmq.host=locahost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+
 spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
