--- a/microservices/employee-service/src/main/resources/application.properties
+++ b/microservices/employee-service/src/main/resources/application.properties
@@ -8,5 +8,29 @@
 #eureka.instance.hostname=localhost
 #spring.application.name=EMPLOYEE-SERVICE
 #eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
+
+#spring.rabbitmq.host=locahost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+
+
 spring.application.name=EMPLOYEE-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
+
+#Actuator endpoints for circuit breaker
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+
+#circuit breaker configs
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.register-health-indicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-size=10
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-type=COUNT_BASED
+
