--- a/microservices/employee-service/src/main/resources/application.properties
+++ b/microservices/employee-service/src/main/resources/application.properties
@@ -34,3 +34,8 @@ resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permitted-number-of-calls
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-size=10
 resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.sliding-window-type=COUNT_BASED
 
+#retryconfigurations
+resilience4j.retry.instances.EMPLOYEE-SERVICE.max-attempts=5
+resilience4j.retry.instances.EMPLOYEE-SERVICE.wait-duration=1s
+
+
